# hyprland-display-switcher

./: Cargo.toml  LICENSE  readme.md
src/: app.rs  config.rs  display.rs  main.rs  state.rs
src/ui/: components.rs  mod.rs  styles.rs
