[package]
name = "hyprland-display-switcher"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
hyprland = "0.4.0-beta.2"
iced = "0.13.1"
iced_layershell = "0.13.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = "1.47.1"
